VSE: Playback speed regression #65333

Closed
opened 2019-05-31 02:17:44 +02:00 by Richard Antalik · 5 comments

System Information
Operating system: Windows

Blender Version
Broken: 2.80, 451c533e25

Short description of error
Default Video Editing startup file has slower video playback then old file created with Blender 2.79

fast.blend

Exact steps for others to reproduce the error
It may be harder to reproduce on high-end machine, but in my case:

  • Factory startup
  • Open Video editing template
  • Add indexed video file
  • Set resolution / proxy size to match input
  • Set frame rate (59.94 was desired in my case)
  • Disable cache to rule out influence
  • Play

Got:

  • 26 FPS with alpha over blend
  • 39 FPS with cross blend (should be same as alpha over when opacity is 1, but that's another bug)

With fast.blend I got:

  • 47 FPS with alpha over blend
  • unstable, but 60 FPS with cross blend
    • 88 FPS maximum, when set scene FPS to 120

fast.blend file was probably created with Blender 2.79
I noticed this issue by coincidence. I will investigate cause of this, but reporting for testing, or if somebody wants to dive into this, I wouldn't mind.

@brecht if this is confirmed, should it be high prio?

**System Information** Operating system: Windows **Blender Version** Broken: 2.80, 451c533e25dde0c574a22fcbbd2624e09c804926 **Short description of error** Default Video Editing startup file has slower video playback then old file created with Blender 2.79 [fast.blend](https://archive.blender.org/developer/F7080441/fast.blend) **Exact steps for others to reproduce the error** It may be harder to reproduce on high-end machine, but in my case: - Factory startup - Open Video editing template - Add indexed video file - Set resolution / proxy size to match input - Set frame rate (59.94 was desired in my case) - Disable cache to rule out influence - Play Got: - 26 FPS with alpha over blend - 39 FPS with cross blend (should be same as alpha over when opacity is 1, but that's another bug) With fast.blend I got: - 47 FPS with alpha over blend - unstable, but 60 FPS with cross blend - 88 FPS maximum, when set scene FPS to 120 fast.blend file was probably created with Blender 2.79 I noticed this issue by coincidence. I will investigate cause of this, but reporting for testing, or if somebody wants to dive into this, I wouldn't mind. @brecht if this is confirmed, should it be high prio?
Author
Member

Added subscribers: @brecht, @iss

Added subscribers: @brecht, @iss

Could be high priority, depends what the cause is.

Could be high priority, depends what the cause is.
Richard Antalik self-assigned this 2019-06-02 22:42:17 +02:00
Author
Member

Overhead is caused by image scaling in preprocessing stage. Linear interpolation is used, when render anti-aliasing is used in workbench settings, even if render engine is not set to workbench.

This also can affect quality of final render.

Overhead is caused by image scaling in preprocessing stage. Linear interpolation is used, when render anti-aliasing is used in workbench settings, even if render engine is not set to workbench. This also can affect quality of final render.

This issue was referenced by 2175fb0217

This issue was referenced by 2175fb02170401355697dec36bed9be6a72c5570
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65333
No description provided.